[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://2B-UV-Fix.tscn" type="PackedScene" id=2]
[ext_resource path="res://Models/Dummy/Dummy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/CameraHelper.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=1]

radius = 0.418962
height = 0.738847

[sub_resource type="CubeMesh" id=2]


[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CharacterMesh" type="Spatial" parent="."]

[node name="2B-UV-Fix" parent="CharacterMesh" instance=ExtResource( 2 )]
transform = Transform( 0.707, 0, 0, 0, 0.707, 0, 0, 0, 0.707, 0, 0, 0 )
visible = false

[node name="Dummy" parent="CharacterMesh" instance=ExtResource( 3 )]
transform = Transform( 0.870705, 0, 0, 0, 0.870705, 0, 0, 0, 0.870705, 0, 0, 0 )

[node name="LedgeFoward" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30606, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0.82 )

[node name="LedgeDown" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.87726, 0.669116 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="LedgeMaxLeft" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.199704, 1.87726, 0.669116 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="LedgeMaxRight" type="RayCast" parent="CharacterMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 1.8771, 0.668639 )
enabled = true
cast_to = Vector3( 0, -0.35, 0 )

[node name="CollisionPlayer" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.787847, 0 )
shape = SubResource( 1 )

[node name="CameraBase" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81909, 0 )
script = ExtResource( 4 )

[node name="CameraPivot" type="Spatial" parent="CameraBase"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0.5 )

[node name="RayCast" type="RayCast" parent="CameraBase/CameraPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.37114e-08, 0, 0.5 )
enabled = true
cast_to = Vector3( 0, 0, -2.5 )

[node name="CameraOrigin" type="Spatial" parent="CameraBase/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )

[node name="CameraOffset" type="Spatial" parent="CameraBase/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.985792, 0.167973, 0, -0.167973, 0.985792, 0, 0, 3 )

[node name="Camera" type="Camera" parent="CameraBase/CameraPivot/CameraOffset"]
transform = Transform( 1, -8.88178e-16, 0, 0, 1, -3.12924e-07, 0, 3.12924e-07, 1, -1.84869e-08, 0.0355206, -0.208461 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.72335, 1.44691 )
visible = false
mesh = SubResource( 2 )
material/0 = null

